--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -5,10 +5,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shirnk-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="stylesheets/index.css" type="text/css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="index.js"></script>
+        <script type="text/javascript" src="../js/index.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-inverse">
@@ -26,7 +26,7 @@
             </div>
         </nav>	
 
-        <div class="view" id="view-search">
+        <div id="view-search">
             <div class="container">
                 <h3 style="text-align: center">Search for Bikes</h3>
                 <div class="input-group flex-container">
@@ -37,19 +37,19 @@
                                     type="button" data-toggle="dropdown" value="search">
                                     City<span class="caret"></span></button>
                                 <ul class="dropdown-menu">
-                                    <li class="dropdown-item" id="citySelect" 
-                                      onclick="dropdown(this.innerHTML);">City</li>
+                                    <a href="#" class="dropdown-item" id="citySelect" 
+                                      onclick="dropdown(this.innerHTML);">City </a> 
                                     <div role="separator" class="dropdown-divider"></div>
-                                    <li class="dropdown-item" id="countrySelect" 
-                                     onclick="dropdown(this.innerHTML);">Country</li>
+                                    <a href="#" class="dropdown-item" id="countrySelect" 
+                                     onclick="dropdown(this.innerHTML);">Country</a>
                                     <div role="separator" class="dropdown-divider"></div>
-                                    <li class="dropdown-item" id="companySelect" 
-                                        onclick="dropdown(this.innerHTML);">Company</li>
+                                    <a href="#" class="dropdown-item" id="companySelect" 
+                                        onclick="dropdown(this.innerHTML);">Company</a>
                                 </ul>
                             </div>
                         </div>
                         <input type="text" id="searchBox" class="form-control" 
-                        aria-label="Text input with dropdown button" placeholder="Search for...">
+                        aria-label="Text input with dropdown button" placeholder="Search for..." >
                         <div class="input-group-btn">
                             <button class="btn btn-default" type="submit" id="submitSearch"><i 
                                     class="glyphicon glyphicon-search"></i></button>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="container flex-text-container">
                     <div id="output"></div>
-                </div>
+                </div> 
             </div>
             <br><br>
         </div>
