--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <img class="img-icon" src="img/bike_icon.jpeg">;
+                    <img class="img-icon" src="../../../public/img/bike_icon.jpeg">;
                     <a class="navbar-brand" href="/index">BikeRack</a>
                 </div>
                 <ul class="nav navbar-nav">
