icon works properly now

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>BikeRack Test</title>
+        <title>TestRack</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shirnk-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <img class="img-icon" src="../../../public/img/bike_icon.jpeg">;
+                    <img class="img-icon" src="img/bike_icon.jpeg">;
                     <a class="navbar-brand" href="/index">BikeRack</a>
                 </div>
                 <ul class="nav navbar-nav">
