--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="stylesheets/index.css" type="text/css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="../js/index.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-inverse">
