setup front end buttons and their javascript

--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -28,6 +28,7 @@
 
         <div id="view-search">
             <div class="container">
+                <button style='float:right' id="results-btn">View Saved Results</button>
                 <h3 style="text-align: center">Search for Bikes</h3>
                 <div class="input-group flex-container">
                     <div class="input-group flex-item">
@@ -59,6 +60,9 @@
                 <div class="container flex-text-container">
                     <div id="output"></div>
                 </div> 
+
+
+
             </div>
             <br><br>
         </div>
