Finished log in

--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -19,32 +19,15 @@
                 </div>
                 <ul class="nav navbar-nav">
                     <li><a href="/index">Home</a></li>
-		    <li class="active"><a href="/login">Log In</a></li>
-                    <li><a href="/signup">Sign Up</a></li>
-		    <li><a href="/search">Search</a></li>
+		    <li><a href="/search">Search</a></li> 
+	            <li><a href="/logout">Log Out</a></li>
                 </ul>
             </div>
         </nav>	
 
-        <div class="view" id="view-login">
+        <div class="view" id="view-user">
             <div class="container">
-                <div class="login flex-container">
-	            <br> <br> <br> <br> <br> <br> <br>
- 	 <form action="/login" method="post">
-                        <h4> Planning ahead for a trip? </h4>
-                        <p> Use <strong><font color="#6699ff">BikeRack</font></strong> to locate a 
-                        bike share location near your destination.</p>
-                        <center>          
-            <h3> Log In </h3>
-            <input class="form-control" type="text" name="username" placeholder="username" autofocus>
-            <input class="form-control" type="password" name="password" placeholder="password">
-		<br> 
-            <input class="form-control" id = "submit" type="submit" name="submit"><br>
-            <p id="error"></p>
-                        </center>
-                        <p id="error"></p>
-                    </form>
-                </div>
+		<p> You have sucessfully logged in. </p> 
             </div>
         </div>
         
