--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -31,25 +31,23 @@
             <div class="container">
                 <div class="login flex-container">
 	            <br> <br> <br> <br> <br> <br> <br>
-                    <form action="#"/search.html>
-                        <h4> Planning ahead for a trip? </h4>
+			<form action="/signup" method="post">
+			<h4> Planning ahead for a trip? </h4>
                         <p> Use <strong><font color="#6699ff">BikeRack</font></strong> 
                         to locate a bike share location near your destination.</p>
 	                <center>
                             <h1 align="center"> Sign Up </h1>
 		            <br>
-                            <input  class="form-control flex-item" type="user" name="username" 
-                            placeholder="username" autofocus>
-                            <input  class="form-control flex-item" type="password" name="password" 
-                            placeholder="password" >
-	                    <input  class="form-control flex-item" type="password" name="password" 
-                            placeholder="confirm password" >
-	                    <br> <br>
-                            <input class="form-control flex-item" id = "submit" type="submit" 
-                            name="submit" value="Sign up!"><br>
+            			<input class="form-control" type="email" name="email" placeholder="email" autofocus>
+            			<input class="form-control" type="text" name="username" placeholder="username">
+            			<input class="form-control" type="password" name="password" placeholder="password">
+				<br> 
+            			<input class="form-control" id = "submit" type="submit" name="submit"><br>
+  
+            			<p id="error"></p>
+          		</form>
                         </center>
                         <p id="error"></p>
-                    </form>
                 </div>
             </div>
         </div>
