connecting front-end to backend

--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -60,8 +60,10 @@
                 <div class="container flex-text-container">
                     <div id="output"></div>
                 </div> 
-
-
+                    <form action="/search/newUser" method="post"> 
+                        <input name="random" value='Add' class='create-button btn' type='submit'>
+                    </form>
+                    <p id="locations">[<%= locations %>]</p>
 
             </div>
             <br><br>
